# web-crawler-ai

./: .cursorignore  .gitignore  README.md  SETUP.md  docker-compose.yml  env.example
backend/: Dockerfile  aerich.ini  create_admin.py  init_db.py  main.py  pyproject.toml  start.sh
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  contractors.py  dashboard.py  forbidden_words.py  mcc_codes.py  scan_results.py  scan_sessions.py  users.py
backend/app/core/: auth.py  config.py  database.py  logging.py
backend/app/models/: contractor.py  forbidden_word.py  mcc_code.py  scan_result.py  scan_session.py  user.py  webpage.py
backend/app/schemas/: contractor.py  violation.py
backend/app/services/: queue_service.py  scanner_service.py
backend/app/workers/: scan_worker.py
backend/migrations/models/: 0_20250801073335_init.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Layout.tsx  Pagination.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ContractorPages.tsx  Contractors.tsx  Dashboard.tsx  ForbiddenWords.tsx  Login.tsx  MCCCodes.tsx  ScanResults.tsx  ScanSessions.tsx  Users.tsx
frontend/src/services/: api.ts
nginx/: nginx.conf
